[prerelease] Map monday-ui-react-core/tokens to tokens.css, move tokens.css to separate folder

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "./dist/": "./dist/",
     "./icons": "./dist/esm/src/components/Icon/Icons/icons.js",
+    "./tokens": "./dist/tokens/tokens.css",
     "./storybookComponents": "./dist/storybook/index.js",
     "./interactionsTests": "./dist/esm/src/tests/interactionsTests.js",
     "./testIds": "./dist/esm/src/tests/testIds.js",
