--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^6.5.1",
     "csstype": "^3.1.0",
+    "ejs": "^3.1.9",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
