replace fonts tokens

--- a/codemod/tsconfig.json
+++ b/codemod/tsconfig.json
@@ -4,9 +4,9 @@
     "module": "commonjs",
     "outDir": "dist",
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "allowJs": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.js"],
   "exclude": [
     "node_modules", "../node_modules"
   ]
