--- a/codemod/package.json
+++ b/codemod/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "glob": "^10.3.0",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "postcss-scss": "^4.0.6"
   }
 }
