--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,22 +1,21 @@
 # .github/workflows/chromatic.yml
 
 # Workflow name
-name: 'Chromatic'
+name: "Chromatic"
 
 # Event for the workflow
 on: push
 
-# List of jobs
 jobs:
   chromatic-deployment:
     # Operating System
     runs-on: ubuntu-latest
-    # Job steps
     steps:
       - uses: actions/checkout@v1
       - name: Install dependencies
         run: npm ci
-        # 👇 Adds Chromatic as a step in the workflow
+      - name: Build react icons
+        run: npm run build:react-icons
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         # Chromatic GitHub Action options
