Create mixins for typography (#217)
* add support in export mixins in monday ui styles

* Update src/internal-mixins/_utilities.scss

* fix mixins

* change mixins script

* change mixins script name

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "validate-icons": "node scripts/validate-meta.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
+    "copy-public-mixins": "scripts/copy-public-mixins.sh",
     "copy-files": "cp -r src/files/ dist/",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
-    "build": "npm run compile-styles && npm run css-minify && npm run copy-files",
+    "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run copy-public-mixins",
     "plop": "plop",
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
