--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -13,9 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install dependencies
-        run: npm ci
-      - name: Build react icons
-        run: npm run build:react-icons
+        run: npm run ci
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         # Chromatic GitHub Action options
