Install vibe-storybook-components

--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
-    "vibe-storybook-components": "file:../vibe-storybook-components/vibe-storybook-components-1.0.0-6.tgz",
     "monday-ui-style": "0.1.162",
     "prop-types": "^15.8.1",
     "react-dates": "21.8.0",
@@ -95,7 +94,8 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
-    "style-inject": "^0.3.0"
+    "style-inject": "^0.3.0",
+    "vibe-storybook-components": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
