--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
-    "style-inject": "^0.3.0"
+    "style-inject": "^0.3.0",
+    "vibe-storybook-components": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
