--- a/package.json
+++ b/package.json
@@ -179,7 +179,8 @@
     "eslint-plugin-storybook": "^0.5.5",
     "execa": "^5.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "js-sha256": "^0.9.0",
     "json-loader": "^0.5.7",
     "jsontosass": "^0.2.0",
