--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "./package.json": "./package.json",
     ".": {
       "import": "./dist/esm/src/index.js",
-      "default": "./dist/main.js",
-      "types": "./dist/types.d.ts"
+      "default": "./dist/main.js"
     },
     "./dist/": "./dist/",
     "./icons": {
       "import": "./dist/esm/src/components/Icon/Icons/icons.js",
-      "default": "./dist/esm/src/components/Icon/Icons/icons.js",
-      "types": "./dist/esm/components/Icon/Icons/index.d.ts"
+      "default": "./dist/allIcons.js"
     },
     "./interactionsTests": "./dist/esm/src/tests/interactionsTests.js",
     "./testIds": "./dist/esm/src/tests/testIds.js",
