chore(storybook): upgrade storybook to 6.5.10+ to enable interaction testing on Chromatic (#1466)

--- a/package.json
+++ b/package.json
@@ -117,24 +117,24 @@
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
-    "@storybook/addon-a11y": "6.5.7",
-    "@storybook/addon-actions": "6.5.7",
-    "@storybook/addon-controls": "6.5.7",
-    "@storybook/addon-docs": "6.5.7",
-    "@storybook/addon-interactions": "^6.5.7",
-    "@storybook/addon-links": "6.5.7",
-    "@storybook/addon-storyshots": "6.5.7",
+    "@storybook/addon-a11y": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-controls": "^6.5.10",
+    "@storybook/addon-docs": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addon-storyshots": "^6.5.10",
     "@storybook/addon-toolbars": "^6.5.9",
-    "@storybook/addons": "6.5.7",
-    "@storybook/builder-webpack5": "6.5.7",
+    "@storybook/addons": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "6.5.7",
+    "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "6.5.7",
-    "@storybook/source-loader": "6.5.7",
+    "@storybook/react": "^6.5.10",
+    "@storybook/source-loader": "^6.5.10",
     "@storybook/storybook-deployer": "^2.8.10",
     "@storybook/testing-library": "^0.0.9",
-    "@storybook/theming": "6.5.7",
+    "@storybook/theming": "^6.5.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
@@ -162,7 +162,7 @@
     "babel-preset-react": "^6.24.1",
     "boxt": "^1.1.1",
     "chalk": "^4.1.2",
-    "chromatic": "^6.3.3",
+    "chromatic": "^6.20.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^6.5.1",
     "csstype": "^3.1.0",
