--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,20 +3,19 @@
 
 name: meta test
 
-on:
-    push
+on: push
 
 jobs:
-    meta-test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 18
-                  registry-url: https://registry.npmjs.org/
-            - run: npm ci
-            - run: npm run test
-            - run: npm run validate-icons
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+  meta-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm run test
+      - run: npm run validate-icons
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
