--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
     "fix-lint": "prettier --write \"{,!(node_modules)/**/}*.{js,jsx,ts,tsx,scss}\"",
-    "pre-release": "./scripts/prerelease.js"
+    "pre-release": "./scripts/prerelease.js",
+    "storybook": "storybook dev -p 7006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
-    "react": ">=16.9.0",
     "prop-types": "^15.7.2",
+    "react": ">=16.9.0",
     "stylelint": "^14.1.0"
   },
   "repository": {
@@ -48,22 +50,40 @@
   },
   "homepage": "https://github.com/mondaycom/monday-ui-style#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-interactions": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-styling": "^1.3.4",
+    "@storybook/blocks": "^7.1.1",
+    "@storybook/manager-api": "^7.1.1",
+    "@storybook/react": "^7.1.1",
+    "@storybook/react-webpack5": "^7.1.1",
+    "@storybook/testing-library": "^0.2.0",
+    "@storybook/theming": "^7.1.1",
     "@types/jest": "^27.4.1",
     "changelog": "^1.4.2",
+    "chromatic": "^6.20.0",
+    "classnames": "^2.3.2",
     "clean-css-cli": "^4.3.0",
+    "execa": "^5.1.1",
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
-    "sass": "^1.51.0",
     "plop": "^2.7.4",
     "prettier": "^2.0.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.63.6",
+    "storybook": "^7.1.1",
     "stylelint": "^14.2.0",
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "execa": "^5.1.1"
-  },
-  "dependencies": {
+    "vibe-storybook-components": "^0.1.0",
     "postcss": "8.4.4",
     "postcss-scss": "^4.0.3",
     "postcss-value-parser": "4.1.0"
