--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "types/**/*", "next/**/*"],
+  "include": ["src/**/*", "types/**/*"],
   "compilerOptions": {
     "module": "ESNext"
   }
