fix entry issues

--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "./interactionsTests": "./dist/esm/src/tests/interactionsTests.js",
     "./testIds": "./dist/esm/src/tests/testIds.js",
     "./storybookComponents": "./dist/storybook/index.js",
-    "./next": {
-      "import": "./dist/esm/src/next/next.js",
-      "types": "./dist/esm/next/next.d.ts"
-    },
+    "./next": "./dist/esm/src/next/next.js",
     "./tokens": "./dist/tokens/tokens.css",
     "./mockedClassNames": {
       "import": "./dist/mocked_classnames_esm/src/index.js"
