--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "react-window": "^1.8.7",
     "react-windowed-select": "^2.0.4",
     "style-inject": "^0.3.0",
-    "vibe-storybook-components": "^0.1.0"
+    "vibe-storybook-components": "^0.1.1-export-storybook-css-tokens-e4c312def9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
