--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -17,7 +17,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Build & deploy Storybook to GitHub Pages
         run: |
-          npm ci
+          npm i -f
           npm run build-storybook -- -o static_storybook
           cd static_storybook
           echo "style.monday.com" > ./CNAME
