--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -15,7 +15,7 @@ jobs:
           node-version-file: ".nvmrc"
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
-        run: npm ci
+        run: npm i -f
       - name: Set up git credentials
         run: |
           git config --global user.name 'ci'
