--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -15,7 +15,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm ci
+          npm i -f
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -33,7 +33,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm ci
+          npm i -f
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -51,7 +51,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm ci
+          npm i -f
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -69,7 +69,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm ci
+          npm i -f
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -87,7 +87,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install
         run: |
-          npm ci
+          npm i -f
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
