Api changes/hadas/next (#1475)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "./interactionsTests": "./dist/esm/src/tests/interactionsTests.js",
     "./testIds": "./dist/esm/src/tests/testIds.js",
     "./storybookComponents": "./dist/storybook/index.js",
+    "./next": "./dist/esm/src/next/next.js",
     "./tokens": "./dist/tokens/tokens.css",
     "./mockedClassNames": {
       "import": "./dist/mocked_classnames_esm/src/index.js"
@@ -33,6 +34,9 @@
       ],
       "testIds": [
         "./dist/esm/tests/test-ids-utils.d.ts"
+      ],
+      "next": [
+        "./dist/esm/next/next.d.ts"
       ]
     }
   },
