--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
     "url": "https://github.com/mondaycom/monday-ui-style/issues"
   },
   "homepage": "https://github.com/mondaycom/monday-ui-style#readme",
+  "dependencies": {
+    "postcss": "8.4.4",
+    "postcss-scss": "^4.0.3",
+    "postcss-value-parser": "4.1.0",
+    "stylelint": "^14.2.0"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
@@ -78,14 +84,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.63.6",
     "storybook": "^7.1.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-recommended-scss": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "vibe-storybook-components": "^0.1.0",
-    "postcss": "8.4.4",
-    "postcss-scss": "^4.0.3",
-    "postcss-value-parser": "4.1.0"
+    "vibe-storybook-components": "^0.1.0"
   }
 }
