--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "auto:bump-major": "node scripts/autobump_major.js",
     "test": "npm run build && npm run test:without-build",
     "test:without-build": "jest",
-    "validate-icons": "node scripts/validate-meta.js",
+    "validate-icons": "node scripts/validate-meta.js && node scripts/validate-icons-colors.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
     "copy-public-mixins": "scripts/copy-public-mixins.sh",
