--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "validate-icons": "node scripts/validate-meta.js && node scripts/validate-icons-colors.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
-    "copy-public-mixins": "scripts/copy-public-mixins.sh",
+    "copy-public-mixins": "scripts/copy-public-folder.sh mixins",
+    "copy-public-functions": "scripts/copy-public-folder.sh functions",
     "copy-files": "cp -r src/files/ dist/",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
-    "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run copy-public-mixins",
+    "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run copy-public-mixins && npm run copy-public-functions",
     "plop": "plop",
     "changelog": "./scripts/changelog.js",
     "stylelint": "stylelint \"**/*.scss\"",
