--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "postcss": "8.4.4",
     "postcss-scss": "^4.0.3",
     "postcss-value-parser": "4.1.0",
-    "stylelint": "^14.2.0"
+    "stylelint": "^14.1.0",
+    "typescript-plugin-css-modules": "^5.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
@@ -86,6 +87,6 @@
     "sass": "^1.63.6",
     "storybook": "^7.1.1",
     "stylelint-config-recommended-scss": "^6.0.0",
-    "vibe-storybook-components": "^0.1.0"
+    "vibe-storybook-components": "^0.2.1"
   }
 }
