chore(browserslist): Use browserslist-config-monday on Vibe

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "a11y-dialog": "^7.5.2",
     "autosize": "^5.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "browserslist-config-monday": "^1.0.6",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
     "monday-ui-style": "0.1.186",
@@ -249,16 +250,7 @@
     "commitMessage": "Deploy Storybook [ci-skip]"
   },
   "browserslist": [
-    "last 4 versions and >0.1%",
-    "Firefox ESR",
-    "not IE 11",
-    "Edge 18",
-    "not dead",
-    "not Samsung > 0",
-    "not op_mini all",
-    "not and_ff > 0",
-    "not and_qq > 0",
-    "not and_uc > 0"
+    "extends browserslist-config-monday"
   ],
   "changelog": {
     "labels": {
